[package]
name = "base-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
config-rs = "0.1.3"
dotenv = "0.15.0"
poem = "1.3.55"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
tokio = {version= "1.27.0", features = ["rt-multi-thread", "macros"]}
